--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style type="text/css">
             @import url(https://themes.googleusercontent.com/fonts/css?kit=V5hHGSPsbfhE7bPDXTEVh3y5OjBtuJ7Pn3yG0ID2e2caWuPwNCzRFPfUpWCJtxO796xlbbE5D7Gw2o7jubnkMA);.lst-kix_list_2-6>li:before {
                 content: "\0025cf   "
@@ -499,7 +500,12 @@
             .c34 {
                 background-color: #ffffff;
                 max-width: 504.7pt;
-                padding: 34pt 45.4pt 34pt 45.4pt
+                padding: 34pt 45.4pt 34pt 45.4pt;
+                position: absolute;
+                top: 75%;
+                left: 50%;
+                margin-right: -50%;
+                transform: translate(-50%, -50%)
             }
 
             .c23 {
@@ -657,6 +663,10 @@
                 widows: 2;
                 text-align: left
             }
+
+            /* * {
+                box-sizing: border-box;
+            } */
         </style>
     </head>
     <body class="c34 doc-content">
