Update index.html Responsiveness

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
+            @media screen and (max-width: 600px) {
+                table,
+                /* tr, */
+                td.c43,
+                td.c31 {
+                    display: block;
+                    width: 100%;
+                    height: auto;
+                }
+            }
+
             @import url(https://themes.googleusercontent.com/fonts/css?kit=V5hHGSPsbfhE7bPDXTEVh3y5OjBtuJ7Pn3yG0ID2e2caWuPwNCzRFPfUpWCJtxO796xlbbE5D7Gw2o7jubnkMA);.lst-kix_list_2-6>li:before {
                 content: "\0025cf   "
             }
@@ -337,7 +348,7 @@
 
             .c18 {
                 -webkit-text-decoration-skip: none;
-                color: #1155cc;
+                color: #0c45a8;
                 font-weight: 400;
                 text-decoration: underline;
                 text-decoration-skip-ink: none;
@@ -500,12 +511,7 @@
             .c34 {
                 background-color: #ffffff;
                 max-width: 504.7pt;
-                padding: 34pt 45.4pt 34pt 45.4pt;
-                position: absolute;
-                top: 75%;
-                left: 50%;
-                margin-right: -50%;
-                transform: translate(-50%, -50%)
+                padding: 34pt 45.4pt 34pt 45.4pt
             }
 
             .c23 {
@@ -663,10 +669,6 @@
                 widows: 2;
                 text-align: left
             }
-
-            /* * {
-                box-sizing: border-box;
-            } */
         </style>
     </head>
     <body class="c34 doc-content">
@@ -776,9 +778,8 @@
                     </h2>
                     <p class="c3">
                         <span class="c18">
-                            <a class="c30" href="https://www.google.com/url?q=https://www.linkedin.com/in/mattclark-io/&amp;sa=D&amp;source=editors&amp;ust=1711817177111704&amp;usg=AOvVaw3fpiVKNWI8qX34iYjrARof">LinkedIn</a>
+                            <a class="c30" href="https://www.linkedin.com/in/mattclark-io">LinkedIn</a>
                         </span>
-                        <span class="c0">&nbsp;</span>
                     </p>
                 </td>
                 <td class="c33" colspan="1" rowspan="1">
@@ -791,7 +792,7 @@
                         <span class="c6">PROFILE</span>
                     </h2>
                     <p class="c2">
-                        <span class="c4">Matt Clark &rsquo;s approach to developing software architectures originate from not only technical excellence but the belief that the best solutions develop from natural and close client communication. With over a decade of design and implementation experience, he combines a commitment to continuous delivery principles to create dependable, scalable, and maintainable applications. </span>
+                        <span class="c4">Matt Clark&rsquo;s approach to developing software architectures originate from not only technical excellence but the belief that the best solutions develop from natural and close client communication. With over a decade of design and implementation experience, he combines a commitment to continuous delivery principles to create dependable, scalable, and maintainable applications. </span>
                     </p>
                     <h2 class="c19" id="h.1t3h5sf">
                         <span class="c11">RELEVANT</span>
@@ -802,7 +803,7 @@
                         <span class="c5">Senior DevOps Engineer</span>
                         <span class="c25">&nbsp;</span>
                         <span class="c9">| </span>
-                        <span class="c13">Center for Open Science (cos.io)</span>
+                        <span class="c13">Center for Open Science (<a class="c18" href="https://cos.io">cos.io)</a></span>
                     </p>
                     <p class="c2">
                         <span class="c5 c23">2015-2018 &nbsp;2019-Present</span>
@@ -825,7 +826,7 @@
                         <span class="c5">Search Engineer</span>
                         <span class="c25">&nbsp;</span>
                         <span class="c9">| </span>
-                        <span class="c13">OpenSource Connections (o19s.com)</span>
+                        <span class="c13">OpenSource Connections (<a class="c18" href="https://o19s.com">o19s.com</a>)</span>
                     </p>
                     <p class="c2">
                         <span class="c5 c23">2013-2014 &nbsp;2018-2019</span>
@@ -841,7 +842,7 @@
                             <span class="c8">U.S. Federal Reserve: Reengineer of internal search for web responsive design and search improvements</span>
                         </li>
                         <li class="c1 li-bullet-0">
-                            <span class="c8">U.S Patent Office PE2E: Reengineer of examiners &rsquo;primary search systems for patent cases</span>
+                            <span class="c8">U.S Patent Office PE2E: Reengineer of examiners&rsquo; primary search systems for patent cases</span>
                         </li>
                     </ul>
                     <p class="c15">
@@ -852,7 +853,7 @@
                         <span class="c5">Software Engineer</span>
                         <span class="c28">&nbsp;|</span>
                         <span class="c9">&nbsp;</span>
-                        <span class="c13">SRA International (sra.com)</span>
+                        <span class="c13">SRA International (<a class="c18" href="https://sra.com">sra.com</a>)</span>
                     </p>
                     <p class="c2">
                         <span class="c5 c23">2009-2015</span>
