Update index.html Padding percentages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                     width: 100%;
                     height: auto;
                 }
+                .c33 {
+                    padding-left: 3%;
+                }
             }
+            
 
             @import url(https://themes.googleusercontent.com/fonts/css?kit=V5hHGSPsbfhE7bPDXTEVh3y5OjBtuJ7Pn3yG0ID2e2caWuPwNCzRFPfUpWCJtxO796xlbbE5D7Gw2o7jubnkMA);.lst-kix_list_2-6>li:before {
                 content: "\0025cf   "
@@ -511,7 +515,9 @@
             .c34 {
                 background-color: #ffffff;
                 max-width: 504.7pt;
-                padding: 34pt 45.4pt 34pt 45.4pt
+                /* padding: 34pt 45.4pt 34pt 45.4pt */
+                padding-left: 3%;
+                padding-top: 0.5%;
             }
 
             .c23 {
