Update index.html media margin

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 .c33 {
                     padding-left: 3%;
                 }
+                .c34 {
+                    padding-left: .5%;
+                    margin: .5%;
+                }
             }
             
 
