Update index.html Linkedin Icon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+
 <html>
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style type="text/css">
             @media screen and (max-width: 600px) {
                 table,
@@ -24,6 +26,11 @@
 
             @import url(https://themes.googleusercontent.com/fonts/css?kit=V5hHGSPsbfhE7bPDXTEVh3y5OjBtuJ7Pn3yG0ID2e2caWuPwNCzRFPfUpWCJtxO796xlbbE5D7Gw2o7jubnkMA);.lst-kix_list_2-6>li:before {
                 content: "\0025cf   "
+            }
+
+            .fa {
+                text-decoration: none !important;
+                color:#000000;
             }
 
             .lst-kix_list_2-7>li:before {
@@ -788,6 +795,7 @@
                     </h2>
                     <p class="c3">
                         <span class="c18">
+                            <a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/mattclark-io" style="font-size:36px"></a>
                             <a class="c30" href="https://www.linkedin.com/in/mattclark-io">LinkedIn</a>
                         </span>
                     </p>
