Update index.html increases R margin

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
                 }
                 .c33 {
                     padding-left: 3%;
+                    width: 2%
                 }
                 .c34 {
-                    padding-left: .5%;
                     margin: .5%;
+                    padding-left: .5%;
+                    padding-riht: 1.5%;
                 }
             }
             
@@ -235,7 +237,7 @@
                 border-top-style: solid;
                 border-left-style: solid;
                 border-bottom-width: 0pt;
-                width: 21.4pt;
+                width: 3%;
                 border-top-color: #000000;
                 border-bottom-style: solid
             }
