Update index.html adding subdomain

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                         <span class="c5">Search Engineer</span>
                         <span class="c25">&nbsp;</span>
                         <span class="c9">| </span>
-                        <span class="c13">OpenSource Connections (<a class="c18" href="https://o19s.com">o19s.com</a>)</span>
+                        <span class="c13">OpenSource Connections (<a class="c18" href="https://www.o19s.com">o19s.com</a>)</span>
                     </p>
                     <p class="c2">
                         <span class="c5 c23">2013-2014 &nbsp;2018-2019</span>
