Update index.html format

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                         <span class="c11">EDUCATION</span>
                     </h2>
                     <p class="c3">
-                        <span class="c5">2001 &mdash;2005</span>
+                        <span class="c5">2001-2005</span>
                         <span class="c9">&nbsp;</span>
                         <span class="c13">
                             <br>
