Update index.html - Adding title tag

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                     </h2>
                     <p class="c3">
                         <span class="c18">
-                            <a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/mattclark-io" style="font-size:36px"></a>
+                            <a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/mattclark-io" style="font-size:36px" title="LinkedIn"></a>
                             <a class="c30" href="https://www.linkedin.com/in/mattclark-io">LinkedIn</a>
                         </span>
                     </p>
