Update index.html - css typo fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 .c34 {
                     margin: .5%;
                     padding-left: .5%;
-                    padding-riht: 1.5%;
+                    padding-right: 1.5%;
                 }
             }
             
