--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                     </p>
                     <ul class="c16 lst-kix_list_2-0">
                         <li class="c1 li-bullet-0">
-                            <span class="c8">LexisNexus: SSE search reengineering to OSS software and natural search relevancy improvements </span>
+                            <span class="c8">LN(F100): SSE search reengineering to OSS software and natural search relevancy improvements </span>
                         </li>
                         <li class="c1 li-bullet-0">
                             <span class="c8">U.S. Federal Reserve: Reengineer of internal search for web responsive design and search improvements</span>
